code: fix admin pages
